# Utilities

./: CMakeLists.txt  Utilities.vcxproj  Utilities.vcxproj.filters
Experimental/: ColumnNaming.h  LiteralStringGenerator.h  TableNaming.h
Source/: Benchmarking.cpp  Benchmarking.h  BitwiseEditor.h  ConfigManager.cpp  ConfigManager.h  InstanceCounter.h  Instrumentor.h  NameOfType.h  Noisy.h  SplitString.h  Synchronized.h  TimeMeasurement.cpp  TypeList.h  Utils.h
Source/Design Patterns/: Observer.h
Source/DesignPatterns/: EntityComponentSystem.h  Observer.h  SignalSlot.h
Source/SQLite/: SQLiteDB.h
include/: Benchmarking.h  ConfigManager.h  ErrorHandling.h  InstanceCounter.h  NameOfType.h  SplitString.h
include/Utilities/: ErrorHandling.h  Instrumentor.h  Noisy.h  Profiler.h  SplitString.h  ThreadSafe.h  ThreadWatcher.h  TimeMeasurement.h
src/: Benchmarking.cpp  ConfigManager.cpp  ErrorHandling.cpp  Profiler.cpp  ThreadWatcher.cpp  TimeMeasurement.cpp  TraceLog.cpp
